--- a/homework-01.Rmd
+++ b/homework-01.Rmd
@@ -1,18 +1,24 @@
 ---
 title: "Homework 01"
-author: "INSERT YOUR NAME HERE"
+author: "Konrat Pekkip"
 output: github_document
 ---
 
+```{r setup}
+library(tidyverse)
+library(knitr)
+opts_chunk$set(echo=TRUE, include = TRUE, warning=FALSE, message=FALSE)
+```
+
 1.  **Reverse-engineering the grammar of graphics.**
 
-```{r label-me-1}
+```{r exercise-1}
 
 ```
 
 2.  **Road traffic accidents in Edinburgh.**
 
-```{r label-me-2}
+```{r exercise-2}
 
 ```
 
