--- a/homework-01.Rmd
+++ b/homework-01.Rmd
@@ -39,8 +39,8 @@ accidents %>%
   scale_fill_viridis_d(name = "Severity")+
   facet_wrap(vars(weekend), ncol = 1)+
   theme_minimal()+
-  labs(title = "Number of Accidents throughout the Day",
-       subtitle = "By Day of Week and Severity",
+  labs(title = "Number of accidents throughout the day",
+       subtitle = "By day of week and severity",
        y = "Density",
        x = "Time of Day")
 ```
@@ -55,7 +55,7 @@ marathon <- nyc_marathon
 
 #create histogram of the distribution of marathon times
 ggplot(data = marathon,
-       mapping = aes(y = time_hrs),)+
+       mapping = aes(y = time_hrs))+
   geom_histogram(binwidth = 0.03, na.rm = TRUE, fill = "navy")+
   theme_minimal()+
   labs(title = "Distribution of Finishing Times of NYC Marathon Winners",
@@ -66,7 +66,7 @@ ggplot(data = marathon,
 
 #create box plot of the distribution of marathon times
 ggplot(data = marathon,
-       mapping = aes(y = time_hrs),)+
+       mapping = aes(y = time_hrs))+
   geom_boxplot(na.rm = TRUE, color = "navy")+
   theme_minimal()+
   theme(axis.text.x=element_blank())+
@@ -81,7 +81,7 @@ The above histogram and box plots show us the distribution of finishing times of
 ```{r exercise-3b}
 #create side by side box plots of finishing time by gender
 ggplot(data = marathon,
-       mapping = aes(y = time_hrs, color = division),)+
+       mapping = aes(y = time_hrs, color = division))+
   scale_color_manual(values = c("magenta", "cyan"))+
   geom_boxplot(na.rm = TRUE, show.legend = FALSE)+
   facet_wrap(vars(division))+
@@ -97,10 +97,25 @@ ggplot(data = marathon,
 Comparing the completion times of female (cyan-colored) and male (magenta-colored) NYC Marathon winners, one can see that men tend to have lower completion times and run the Marathon quicker than women, indicated by the lower median and interquartile range. However, there are a few outliers among the male runners who appear to have finished the race at a similar or slower time to the median of female Marathon winners. In comparison to the box plot constructed in exercise 3a, the box plots divided by gender reveal more outliers. 
 
 ```{r exercise-3c}
+#redo previous plot without faceting
 ggplot(data = marathon,
        mapping = aes(y = time_hrs, color = division))+
   scale_color_manual(values = c("magenta", "cyan"))+
+  geom_boxplot(na.rm = TRUE)+
+  theme_minimal()+
+  theme(axis.text.x=element_blank())+
+  labs(title = "Distribution of Finishing Times of NYC Marathon Winners by Gender",
+       subtitle = "Includes data from NYC Marathons between 1970-2020",
+       y = "Marathon Completion Time in Hours",
+       x = "Gender",
+       color = "Gender",
+       caption = "Source: OpenIntro Package")
+
+#redo previous plot without color differences
+ggplot(data = marathon,
+       mapping = aes(y = time_hrs))+
   geom_boxplot(na.rm = TRUE, show.legend = FALSE)+
+  facet_wrap(vars(division))+
   theme_minimal()+
   theme(axis.text.x=element_blank())+
   labs(title = "Distribution of Finishing Times of NYC Marathon Winners by Gender",
@@ -110,7 +125,7 @@ ggplot(data = marathon,
        caption = "Source: OpenIntro Package")
 ```
 
-[INCLUDE EXPLANATION OF WHAT'S REDUNDANT]
+I don't think very many things in the plot from exercise 3b were redundant. The only thing that I noticed is redundant is that I assigning a different color for the different genders *and* made use of faceting to work out the same difference. In the first plot above, I thus redid the same graph but this time without faceting, as the color difference already indicates the gender division. Alternatively, one could facet the plot without using color, which is what I do for the second plot. Neither graph meaningfully changes the data-to-ink ration in my opinion. 
 
 ```{r exercie-3d}
 ggplot(data = marathon,
@@ -130,8 +145,81 @@ This plot is the first one that allows us to better understand the changes in co
 
 ## Question 4: US counties
 
-```{r exercise-4}
+```{r exercise-4a}
+#examine code from exercise 4a
+ggplot(county) +
+  #geom_point(aes(x = median_edu, y = median_hh_income)) +
+  geom_boxplot(aes(x = smoking_ban, y = pop2017))
+```
 
+The code above works in the sense that it produces an output. However, assuming the intention was to create a plot showcasing the relationship between median education level and median household income on one hand, and a box plot indicating the distribution of the population in 2017 by counties with comprehensive, partial or no smoking bans, I believe the above code does not achieve that. 
+
+First of all, I think the coder should have created two separate ggplots, as there is no overlap between variables between the two plots they attempted to create. Secondly, to analyze the relationship between a categorical and a continuous variable (i.e. median education level and median household income), a scatter plot is not the way to go. Instead, the coder could have utilized a box plot to indicate the distribution of household income per education level, or a violin plot in order to indicate the density of observations by income level.
+
+Considering the second plot the coder attempted to create, formally, a box plot is an appropriate way of going about it, as it maps the distribution of a continuous variable (i.e. population in 2017) onto a categorical variable (i.e. smoking ban). However, in this context, I'm not sure what the contribution is, as the two variables do not seem related to me.
+
+```{r exercise-4b}
+#recreate plot A from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty))+
+  geom_point()+
+  labs(title = "Plot A")
+
+#recreate plot B from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty))+
+  geom_point()+
+  geom_smooth(se = FALSE)+
+  labs(title = "Plot B")
+
+#recreate plot C from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty))+
+  geom_point(color = "black")+
+  geom_smooth(mapping = aes(group = metro),
+              se = FALSE,
+              color = "green")+
+  labs(title = "Plot C")
+
+#recreate plot D from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty))+
+  geom_point(color = "black")+
+  geom_smooth(mapping = aes(group = metro),
+              se = FALSE,
+              color = "blue")+
+  labs(title = "Plot D")
+
+#recreate plot E from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty, color = metro))+
+  geom_point()+
+  geom_smooth(mapping = aes(linetype = metro),
+              se = FALSE,
+              color = "blue")+
+  labs(title = "Plot E")
+
+#recreate plot F from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty, color = metro))+
+  geom_point()+
+  geom_smooth(se = FALSE,
+              method = 'gam')+
+  labs(title = "Plot F")
+
+#recreate plot G from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty, color = metro))+
+  geom_point()+
+  geom_smooth(mapping = aes(group = 1),
+              se = FALSE)+
+  labs(title = "Plot G")
+
+#recreate plot H from exercise 4b
+ggplot(data = county,
+       mapping = aes(x = homeownership, y = poverty, color = metro))+
+  geom_point()+
+  labs(title = "Plot H")
 ```
 
 ## Question 5: Napoleon’s march.
