--- a/homework-01.Rmd
+++ b/homework-01.Rmd
@@ -50,11 +50,8 @@ The above plot displays the density of accidents that occur in Edinburgh in 2018
 ## Question 3: NYC marathon winners
 
 ```{r exercise-3a}
-#define dataset of interest
-marathon <- nyc_marathon
-
 #create histogram of the distribution of marathon times
-ggplot(data = marathon,
+ggplot(data = nyc_marathon,
        mapping = aes(y = time_hrs))+
   geom_histogram(binwidth = 0.03, na.rm = TRUE, fill = "navy")+
   theme_minimal()+
@@ -65,7 +62,7 @@ ggplot(data = marathon,
        caption = "Source: OpenIntro Package")
 
 #create box plot of the distribution of marathon times
-ggplot(data = marathon,
+ggplot(data = nyc_marathon,
        mapping = aes(y = time_hrs))+
   geom_boxplot(na.rm = TRUE, color = "navy")+
   theme_minimal()+
@@ -80,7 +77,7 @@ The above histogram and box plots show us the distribution of finishing times of
 
 ```{r exercise-3b}
 #create side by side box plots of finishing time by gender
-ggplot(data = marathon,
+ggplot(data = nyc_marathon,
        mapping = aes(y = time_hrs, color = division))+
   scale_color_manual(values = c("magenta", "cyan"))+
   geom_boxplot(na.rm = TRUE, show.legend = FALSE)+
@@ -98,7 +95,7 @@ Comparing the completion times of female (cyan-colored) and male (magenta-colore
 
 ```{r exercise-3c}
 #redo previous plot without faceting
-ggplot(data = marathon,
+ggplot(data = nyc_marathon,
        mapping = aes(y = time_hrs, color = division))+
   scale_color_manual(values = c("magenta", "cyan"))+
   geom_boxplot(na.rm = TRUE)+
@@ -112,7 +109,7 @@ ggplot(data = marathon,
        caption = "Source: OpenIntro Package")
 
 #redo previous plot without color differences
-ggplot(data = marathon,
+ggplot(data = nyc_marathon,
        mapping = aes(y = time_hrs))+
   geom_boxplot(na.rm = TRUE, show.legend = FALSE)+
   facet_wrap(vars(division))+
@@ -128,7 +125,7 @@ ggplot(data = marathon,
 I don't think very many things in the plot from exercise 3b were redundant. The only thing that I noticed is redundant is that I assigning a different color for the different genders *and* made use of faceting to work out the same difference. In the first plot above, I thus redid the same graph but this time without faceting, as the color difference already indicates the gender division. Alternatively, one could facet the plot without using color, which is what I do for the second plot. Neither graph meaningfully changes the data-to-ink ration in my opinion. 
 
 ```{r exercie-3d}
-ggplot(data = marathon,
+ggplot(data = nyc_marathon,
        mapping = aes(x = year, y = time_hrs, color = division, shape = division))+
   scale_color_manual(values = c("magenta", "cyan"), name = "Gender")+
   scale_shape_manual(values = c(16, 17), name = "Gender")+
@@ -169,7 +166,9 @@ ggplot(data = county,
 ggplot(data = county,
        mapping = aes(x = homeownership, y = poverty))+
   geom_point()+
-  geom_smooth(se = FALSE)+
+  geom_smooth(se = FALSE,
+              method = 'gam',
+              formula = y ~ s(x, bs = "cs"))+
   labs(title = "Plot B")
 
 #recreate plot C from exercise 4b
@@ -178,7 +177,9 @@ ggplot(data = county,
   geom_point(color = "black")+
   geom_smooth(mapping = aes(group = metro),
               se = FALSE,
-              color = "green")+
+              color = "green",
+              method = 'gam',
+              formula = y ~ s(x, bs = "cs"))+
   labs(title = "Plot C")
 
 #recreate plot D from exercise 4b
@@ -187,7 +188,9 @@ ggplot(data = county,
   geom_point(color = "black")+
   geom_smooth(mapping = aes(group = metro),
               se = FALSE,
-              color = "blue")+
+              color = "blue",
+              method = 'gam',
+              formula = y ~ s(x, bs = "cs"))+
   labs(title = "Plot D")
 
 #recreate plot E from exercise 4b
@@ -196,7 +199,9 @@ ggplot(data = county,
   geom_point()+
   geom_smooth(mapping = aes(linetype = metro),
               se = FALSE,
-              color = "blue")+
+              color = "blue",
+              method = 'gam',
+              formula = y ~ s(x, bs = "cs"))+
   labs(title = "Plot E")
 
 #recreate plot F from exercise 4b
@@ -204,7 +209,8 @@ ggplot(data = county,
        mapping = aes(x = homeownership, y = poverty, color = metro))+
   geom_point()+
   geom_smooth(se = FALSE,
-              method = 'gam')+
+              method = 'gam',
+              formula = y ~ s(x, bs = "cs"))+
   labs(title = "Plot F")
 
 #recreate plot G from exercise 4b
@@ -212,7 +218,9 @@ ggplot(data = county,
        mapping = aes(x = homeownership, y = poverty, color = metro))+
   geom_point()+
   geom_smooth(mapping = aes(group = 1),
-              se = FALSE)+
+              se = FALSE,
+              method = 'gam',
+              formula = y ~ s(x, bs = "cs"))+
   labs(title = "Plot G")
 
 #recreate plot H from exercise 4b
