--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -10,6 +10,8 @@ library(tidyverse)
 
 ## Dataset
 
+This is a test sentence.
+
 A brief description of your dataset including its provenance, dimensions, etc. as well as the reason why you chose this dataset.
 
 Make sure to load the data and use inline code for some of this information.
