--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -10,7 +10,7 @@ library(tidyverse)
 
 ## Dataset
 
-This is a test sentence.
+This is a test sentence. This is another test sentence!
 
 A brief description of your dataset including its provenance, dimensions, etc. as well as the reason why you chose this dataset.
 
