--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -6,11 +6,12 @@ output: github_document
 
 ```{r load-packages, message = FALSE}
 library(tidyverse)
+
+erasmus <- readr::read_csv('https://raw.githubusercontent.com/rfordatascience/tidytuesday/master/data/2022/2022-03-08/erasmus.csv')
+
 ```
 
 ## Dataset
-
-This is a test sentence. This is another test sentence!
 
 A brief description of your dataset including its provenance, dimensions, etc. as well as the reason why you chose this dataset.
 
