--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -12,7 +12,7 @@ library(tidyverse)
 
 A brief description of your dataset including its provenance, dimensions, etc. as well as the reason why you chose this dataset. Make sure to load the data and use inline code for some of this information.
 
-The dataset we’re analyzing is available on kaggle and  contains historical data on the modern Olympic game and includes all games starting from Athens 1896 till 2016. This data was scraped from www.sports-reference.com in 2018 and wrangled by rgriffin. Till 1992 winter and summer games used to be held in the same year. After 1992, both summer and winter games take place in a 4-years cycle such that winter game in 1994, summer in 1996, then again winter in 1998 and so on.
+The dataset we’re analyzing is available on kaggle and  contains historical data on the modern Olympic game and includes all games starting from Athens 1896 till 2016. This data was scraped from www.sports-reference.com in 2018 and wrangled by rgriffin. Till 1992 winter and summer games used to be held in the same year. After 1992, both summer and winter games take place in a 4-years cycle such that winter game in 1994, summer in 1996, then again winter in 1998 and so on. The data set contains rich information on worldwide participation in Olympic Games across yeas. We choose it since we are interested in showing political or historical factors that could influence countries' performance and contribution to hosting the Games.
 
 This data contains 271116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual olympic athlete event. The name of columns are:
 
