Calculated unique number of cities, years, teams etc
Added a small paragraph on this

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -14,7 +14,7 @@ A brief description of your dataset including its provenance, dimensions, etc. a
 
 The dataset we’re analyzing is available on kaggle and  contains historical data on the modern Olympic game and includes all games starting from Athens 1896 till 2016. This data was scraped from www.sports-reference.com in 2018 and wrangled by rgriffin. Till 1992 winter and summer games used to be held in the same year. After 1992, both summer and winter games take place in a 4-years cycle such that winter game in 1994, summer in 1996, then again winter in 1998 and so on. The data set contains rich information on worldwide participation in Olympic Games across yeas. We choose it since we are interested in showing political or historical factors that could influence countries' performance and contribution to hosting the Games.
 
-This data contains 271116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual olympic athlete event. The name of columns are:
+This data contains 271116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual olympic athlete event. There are data on 66 different sports, 1184 different teams, 51 games, 230 different NOCs, 42 different host cities across 35 different years. The name of columns are:
 
 ID - A unique number for each athlete
 Name - Name of athlete
@@ -32,7 +32,7 @@ Sport - Name of the sport played
 Event - Name of particular event
 Medal - Gold, Silver, Bronze, or NA
 
-In our data set 72.5 percent of the participants are male whereas the rest are female if we exclude missing values. The average age of athlete is 25.557 years, the oldest athlete is 97 years and the youngest is 10 years old. The average height of an athlete is 175.339 cm, the maximum height is 226 cm, and minimum is 127 cm. The average weight of an athlete is 70.702 maximum is 214 and minimum is 25 kilograms. 222552 of the athlestes played in the summer seasons and 222552 played in the winter season.
+In our data set 72.5 percent of the participants are male whereas the rest are female if we exclude missing values. The average age of athlete is 25.557 years, the oldest athlete is 97 years and the youngest is 10 years old. The average height of an athlete is 175.339 cm, the maximum height is 226 cm, and minimum is 127 cm. The average weight of an athlete is 70.702 maximum is 214 and minimum is 25 kilograms. 222552 of the athletes played in the summer seasons and 222552 played in the winter season.
 
 ```{r Overview of the dataset}
 olympics_data <- read.csv("/Users/kamranahmed/Documents/GitHub/proj1-elated-anura/data/olympics.csv")
@@ -61,10 +61,16 @@ olympics_data %>%
 olympics_data %>%
   group_by(city) %>%
    summarise(count=n())
+# this gives the number of participants who pafrticipated in the games held in these cities
 olympics_data %>%
   group_by(season) %>%
    summarise(count=n())
-# this gives the number of participants who pafrticipated in the games held in these cities
+length(unique(olympics_data$sport))
+length(unique(olympics_data$team))
+length(unique(olympics_data$games))
+length(unique(olympics_data$year))
+length(unique(olympics_data$noc))
+length(unique(olympics_data$city))
 ```
 
 ## Questions
