Updated the readme.md in the data folder to include a codebook and made more edits to the proposal.

--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -69,6 +69,6 @@ The following lays out our plan for answering each of the research questions.
 
 1. In a first step, we will construct a time-series plot comparing the number of medals won by the United States and the USSR/Russia and all other countries. We plot the variable ‘year’ on the x-axis and a newly created variable counting the number of gold medals per country on the y axis. Finally, different colors (or facets, to be determined) will indicate whether medals were won in the Summer Olympics or the Winter Olympics, as well as display cumulative medal wins. In a second step, we expand the same analysis to not only include the United States and the USSR/Russia, but to include member-states of both NATO and the Warsaw Pact.
 
-2. In a first step, we will summarize the data set into a table showing the average number of medals won by each country every year. We will incorporate an external data set with information on hosting countries. We will also need to create one categorized or dummy variable for whether or not to host the Game. We will create a summarized data set and data visualizations to show whether countries would perform better (or worse) when they were hosting a Game compared to when they were not. The summarized data set will contain a new variable representing the average number of medals for each country divided by the hosting status. So the x-axis may represent the new dummy variable, and the y-axis may represent the average number of medals. The third variable can be illustrated by different shapes or colors, combined with the legend to show the hosting status.
+2. In a first step, we will summarize the data set into a table showing the average number of medals won by each country every year. We will incorporate an external data set with information on hosting countries. We will also need to create one categorized or dummy variable for whether or not to host the Game. We will create a summarized data set and data visualizations to show whether countries would perform better (or worse) when they were hosting a Game compared to when they were not. The summarized data set will contain a new variable representing the average number of medals for each country divided by the hosting status. So the x-axis may represent the new dummy variable, and the y-axis may represent the average number of medals. The third variable can be illustrated by different shapes or colors, combined with the legend to show the hosting status. In order to answer this question, we will draw on additional variables from a secondary dataset including information about the host countries of each Olympic game.
 
 We can potentially further discuss the monetary costs-and-benefit comparison of hosting an Olympic Games with external data sets containing the needed information. We can either compare the trends throughout the years (adjusted by inflation). The x-axis will then be the year variable, and the y-axis will be monetary values for either the cost or the revenue variable. It can even incorporate the season variable to show different trends for the summer and winter Olympics.
