--- a/proposal/proposal.Rmd
+++ b/proposal/proposal.Rmd
@@ -15,7 +15,7 @@ library(here) # simplifies relative file paths
 
 ## Dataset
 
-The dataset we’re analyzing is available on kaggle and  contains historical data on the modern Olympic game and includes all games starting from Athens 1896 till 2016. This data was scraped from [www.sports-reference.com](www.sports-reference.com) in 2018 and wrangled by rgriffin. Until 1992, winter and summer games used to be held in the same year. Since 1992, both summer and winter games have been taking place in a 4-year cycle (an olympiad!), resulting in winter games in 1994, summer in 1996, then again winter in 1998, and so on. The data set contains rich information on worldwide participation in Olympic Games across yeas. We chose it because we're interested in the Olympics, and we believe we can show political and historical trends influencing countries' performances and contributions to hosting the Games.
+The dataset we’re analyzing is available on kaggle and contains historical data on the modern Olympic game and includes all games starting from Athens 1896 till 2016. This data was scraped from [www.sports-reference.com](www.sports-reference.com) in 2018 and wrangled by rgriffin. Until 1992, winter and summer games used to be held in the same year. Since 1992, both summer and winter games have been taking place in a 4-year cycle (an olympiad!), resulting in winter games in 1994, summer in 1996, then again winter in 1998, and so on. The data set contains rich information on worldwide participation in Olympic Games across yeas. We chose it because we're interested in the Olympics, and we believe we can show political and historical trends influencing countries' performances and contributions to hosting the Games.
 
 This data contains 271,116 observations and 15 variables. Each row contains data on an individual athlete participating in an individual Olympic event. There is data on 66 different sports, 1184 different teams, 51 games, 230 different NOCs, 42 different host cities across 35 different years. The variables are included in the codebook in the `readme` file in the data folder in this repository.
 
@@ -25,7 +25,7 @@ In our data set, 72.5 percent of the participants are male whereas the rest are 
 olympics_data <- read_csv(here("data", "olympics.csv"))
 ```
 
-```{r variable-descriptio}
+```{r variable-description, message=FALSE, warning=FALSE}
 #create dummy variables to ease statistical analysis
 olympics_data$sex_dummy <- ifelse(olympics_data$sex=="M", 1,0)
 vars_of_interest <- c("sex_dummy", "age", "height", "weight")
@@ -72,3 +72,4 @@ The following lays out our plan for answering each of the research questions. A 
 2. In a first step, we will summarize the data set into a table showing the average number of medals won by each country every year. We will incorporate an external data set with information on hosting countries. We will also need to create one categorized or dummy variable for whether or not to host the Game. We will create a summarized data set and data visualizations to show whether countries would perform better (or worse) when they were hosting a Game compared to when they were not. The summarized data set will contain a new variable representing the average number of medals for each country divided by the hosting status. So the x-axis may represent the new dummy variable, and the y-axis may represent the average number of medals. The third variable can be illustrated by different shapes or colors, combined with the legend to show the hosting status. In order to answer this question, we will draw on additional variables from a secondary dataset including information about the host countries of each Olympic game.
 
 We can potentially further discuss the monetary costs-and-benefit comparison of hosting an Olympic Games with external data sets containing the needed information. We can either compare the trends throughout the years (adjusted by inflation). The x-axis will then be the year variable, and the y-axis will be monetary values for either the cost or the revenue variable. It can even incorporate the season variable to show different trends for the summer and winter Olympics.
+
